--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
-certifi==2025.1.31
-charset-normalizer==3.4.1
-diskcache==5.6.3
-filelock==3.17.0
-fsspec==2025.2.0
-huggingface-hub==0.28.1
-idna==3.10
-Jinja2==3.1.5
-llama_cpp_python==0.3.7
-MarkupSafe==3.0.2
-numpy==2.2.2
-packaging==24.2
-py-cpuinfo==9.0.0
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.2
-tokenizers==0.21.0
-tqdm==4.67.1
-transformers==4.48.2
-typing_extensions==4.12.2
-urllib3==2.3.0
-torch==2.0.1
+# Core dependencies
+torch>=2.0.0
+transformers>=4.36.2
+tokenizers>=0.15.0
+accelerate>=0.25.0
+psutil>=5.9.0
+
+# Common utilities
+numpy>=1.24.0
+requests>=2.31.0
+tqdm>=4.66.0
+PyYAML>=6.0.1
+filelock>=3.13.1
+
+# Hugging Face ecosystem
+huggingface-hub>=0.19.0
+safetensors>=0.4.0
+
+# Type checking and compatibility
+typing_extensions>=4.8.0
+packaging>=23.2
+
+# Optional - only for GPU systems
+# bitsandbytes>=0.41.1
