--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,39 @@
-# Core dependencies
-torch>=2.0.0
-transformers>=4.36.2
-tokenizers>=0.15.0
-accelerate>=0.25.0
-psutil>=5.9.0
-
-# Common utilities
-numpy>=1.24.0
-requests>=2.31.0
-tqdm>=4.66.0
-PyYAML>=6.0.1
-filelock>=3.13.1
-
-# Hugging Face ecosystem
-huggingface-hub>=0.19.0
-safetensors>=0.4.0
-
-# Type checking and compatibility
-typing_extensions>=4.8.0
-packaging>=23.2
-
-# Optional - only for GPU systems
-# bitsandbytes>=0.41.1
+accelerate==1.3.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+filelock==3.17.0
+fsspec==2025.2.0
+huggingface-hub==0.28.1
+idna==3.10
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.2
+psutil==6.1.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.2
+sympy==1.13.1
+tokenizers==0.21.0
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.48.3
+triton==3.2.0
+typing_extensions==4.12.2
+urllib3==2.3.0
